--- a/index.html
+++ b/index.html
@@ -4,26 +4,11 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="estilo.css">
+	<script type="text/javascript" src="script.js"></script>
 	<title>Calculadora</title>
-
-    <script type="text/javascript">
-
-        function calcularValores(){
-	        var s1 = document.getElementById("s1").value;
-			var ns1 = s1 * 400
-			var bs1 = s1 * 8
-	        var s2 = document.getElementById("s2").value;
-			var ns2 = s2 * 200
-	        var s3 = ((parseInt(ns1) + parseInt(ns2))/1000);
-	        alert('Você vai precisar de pelo menos ' + s3 + 'kg de carne e '+ bs1 + ' latas de cerveja');
-        }
-
-    </script>
-
 </head>
 
 <body>
-
 	<div class="caixa1">
          <fieldset>
 	        <legend>Cálculo de Churrasco</legend>
@@ -37,7 +22,6 @@
 			<br><br>
 	        <button id="Calcular" onclick="calcularValores()">Calcular</button>
         </fieldset>
- 
 </body>
 <footer>2019 - GBR</footer>
 </html>
